fixed nav link contrast

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -74,6 +74,7 @@ nav {
     nav {
         position: sticky;
         top: 0;
+        z-index: 3;
     }
 }
 
