--- a/src/css/styles/halloween.css
+++ b/src/css/styles/halloween.css
@@ -14,8 +14,8 @@
     --scroll-border: var(--box-border);
 
     --radius: 0;
+}
 
-    nav a {
-        background-color: #2f186b;
-    }
+body nav a {
+    background-color: #2f186b;
 }
