--- a/src/css/styles/lakemist.css
+++ b/src/css/styles/lakemist.css
@@ -14,8 +14,8 @@
     --scroll-border: var(--box-border);
 
     --radius: 0;
+}
 
-    nav a {
-        background-color: var(--background);
-    }
+body nav a {
+    background-color: var(--background);
 }
